--- a/client/package.json
+++ b/client/package.json
@@ -9,14 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/drei": "^9.58.5",
+    "@react-three/drei": "9.74.11",
     "@react-three/fiber": "^8.12.0",
-    "framer-motion": "^10.9.4",
+    "framer-motion": "^10.10.0",
     "maath": "^0.5.3",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
-    "three": "^0.150.1",
+    "three": "^0.151.2",
     "valtio": "^1.10.3"
   },
   "devDependencies": {
@@ -24,8 +24,8 @@
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.3.0",
-    "vite": "^4.2.0"
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.1",
+    "vite": "^4.5.5"
   }
 }
